customize bootstrap variables

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About</h1>
-<p>I am working on my One Month Rails project: Cody's Pinboard</p>
+<div class="jumbotron">
+	<h2>About</h2>
+	<h4>This is a simple web app that was built as a project for Cody's One Month Rails course. Built in Ruby, using the Rails web application framework, the app is designed to mimic some of the most basic functionality of the popular photo-sharing website Pinterest.</h4>
+</div>
