--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,19 @@
-$body-bg: #ecf0f1;
-$navbar-default-bg: #e67e22;
-$navbar-default-link-color: white;
-$brand-primary: #e67e22;
-$jumbotron-bg: #bdc3c7;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:                      #ecf0f1;
+$font-family-sans-serif:        'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:					45px;
+$navbar-default-bg:             white;
+$navbar-default-brand-color:    #e67e22;
+$brand-primary:                 #e67e22;
+$jumbotron-bg:                  white;
 
 @import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
