--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
 
-<div class="jumbotron">
+<div class="jumbotron center">
 	<h1>Welcome to my app!</h1>
-	Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %></p>
+	<p>
+	<%= link_to "Login", "#", class: "btn btn-default btn-lg" %>
+	<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %></p>
+	</p>
 </div>
 
 
