--- a/app/assets/stylesheets/pins.css.scss
+++ b/app/assets/stylesheets/pins.css.scss
@@ -1,20 +1,3 @@
-$body-bg:                      #ecf0f1;
-$font-family-sans-serif:        'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$navbar-height:					45px;
-$navbar-default-bg:             white;
-$navbar-default-brand-color:    #e67e22;
-$brand-primary:                 #e67e22;
-$jumbotron-bg:                  white;
-
-@import 'bootstrap';
-
-.center {
-     text-align: center;
-}
-
-.navbar-brand {
-     font-weight: bold;
-}
-.checkbox input[type="checkbox"] {
-  margin-left: 0;
-}
+// Place all the styles related to the pins controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
