--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
 <div class="jumbotron">
-	<h2>About</h2>
-	<h4>This is a simple web app that was built as a project for Cody's One Month Rails course. Built in Ruby, using the Rails web application framework, the app is designed to mimic some of the most basic functionality of the popular photo-sharing website Pinterest.</h4>
+	<h2>What is Corky?</h2>
+	<p>Corky is a virtual corkboard that allows you to create a collage of all things digital. Want to remember that delicious recipe you found online? Cork it. Find a website that has the golf clubs you've been wanting? Cork it. Want to share your vacation photos? Create a new corkboard and upload your pictures within seconds.</p>
+<p>	You can choose to keep a corkboard private, for your eyes only, or make it public for the world to see. You can even quickly post a link to a corkboard, or indivudally corked item, to your favorite social media service.</p> 
 </div>
