--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 
 <div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
+	<h2>Welcome to Corky</h2>
 	    <% if user_signed_in? %>
-          # do something
+          Tap on 'Cork it' to get started
      <% else %>
 
 	<p>
