--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -7,7 +7,7 @@ $navbar-default-bg:             white;
 $navbar-default-brand-color:    #e67e22;
 $brand-primary:                 #e67e22;
 $jumbotron-bg:                  white;
-
+$icon-font-path: 'bootstrap/';
 @import 'bootstrap';
 
 .center {
