--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,12 +17,24 @@
   
       
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
+        
+    <li><%= link_to root_path do %>
+              <span class="glyphicon glyphicon-home"></span> Home
+            <% end %>
+          </li>
+
         <li><%= link_to "About", about_path %></li>
          <% if user_signed_in? %>
-          <li><%= link_to 'Cork it', new_pin_path %></li>
-          <li><%= link_to "Account Settings", edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          <li>
+            <%= link_to new_pin_path do %>
+              <span class="glyphicon glyphicon-pushpin"></span> Cork it
+            <% end %>
+          </li>
+          <li><%= link_to edit_user_registration_path do %>
+            <span class="glyphicon glyphicon-cog"></span>Settings
+            <% end %>
+          </li>
+          <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
