fix canceled user bug

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Corky", root_path, class: "navbar-brand" %>
+      <center>
+      <%= link_to "Corky", root_path, class: "navbar-brand" %></center>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
