--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,7 @@
 <div class="jumbotron">
 	<h2>What is Corky?</h2>
-	<p>Corky is a virtual corkboard that allows you to create a collage of all things digital. Want to remember that delicious recipe you found online? Cork it. Find a website that has the golf clubs you've been wanting? Cork it. Want to share your vacation photos? Create a new corkboard and upload your pictures within seconds.</p>
-<p>	You can choose to keep a corkboard private, for your eyes only, or make it public for the world to see. You can even quickly post a link to a corkboard, or indivudally corked item, to your favorite social media service.</p> 
-</div>
+	<p><h4>Corky is a virtual corkboard that allows you to create a collage of all things digital. Want to remember that delicious recipe you found online? Cork it. Find a website that has the golf clubs you've been wanting? Cork it. Want to share your vacation photos? Create a new corkboard and upload your pictures within seconds.
+You can choose to keep a corkboard private, for your eyes only, or make it public for the world to see. You can even quickly post a link to a corkboard, or indivudally corked item, to your favorite social media service.</p> 
+
+If you want to check it out, you can sign up <%= link_to "here", new_user_registration_path %> for free.
+</h4></div>
