--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,16 +24,13 @@
             <% end %>
           </li>
 
-        <li><%= link_to "About", about_path %></li>
          <% if user_signed_in? %>
           <li>
             <%= link_to new_pin_path do %>
               <span class="glyphicon glyphicon-pushpin"></span> Cork it
             <% end %>
           </li>
-          <li><%= link_to edit_user_registration_path do %>
-            <span class="glyphicon glyphicon-cog"></span>Settings
-            <% end %>
+          <li><%= link_to "Settings", edit_user_registration_path %>
           </li>
           <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
         <% else %>
