--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -21,6 +21,6 @@
     <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.submit class: "btn btn-primary" %>
+    <button type="submit" class="btn btn-primary">Cork it!</button>
   </div>
 <% end %>
