--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -20,3 +20,8 @@ $icon-font-path: 'bootstrap/';
 .checkbox input[type="checkbox"] {
   margin-left: 0;
 }
+
+.label {
+    line-height: 2.2; 
+    margin-right: .25em;   
+}
