--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,12 +13,20 @@
       <%= link_to "Corky", root_path, class: "navbar-brand" %></center>
     </div>
 
+
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   
       
       <ul class="nav navbar-nav navbar-right">
-        
+
+    <form class="navbar-form navbar-left" role="search">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
     <li><%= link_to root_path do %>
               <span class="glyphicon glyphicon-home"></span> Home
             <% end %>
