--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -19,8 +19,13 @@
   <div class="form-group"?
     <%= f.label :description %>
     <%= f.text_field :description, class: "form-control" %>
-  </div>
+</div>
+<div class="form-group">
+    <%= f.label :tags, "Tags (separated by commas)" %>
+    <%= f.text_field :tag_list, class: "form-control" %>
+</div>
   <div class="form-group">
     <button type="submit" class="btn btn-primary">Cork it!</button>
   </div>
+
 <% end %>
