--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -9,23 +9,28 @@
 
 <% pin.tags.any? %>
      <% pin.tags.each do |tag| %>
-     <span class="label label-default">
+     <span class="label label-info">
         <%= link_to tag.name, tag_path(tag.name) %>
      </span>  
 <% end %>
 <br>
+        
         <strong><%= pin.user.name if pin.user %></strong>
+
         
         <% if current_user && (pin.user == current_user) %>
           <div class="actions">
-            <%= link_to edit_pin_path(pin) do %>
-              <span class="glyphicon glyphicon-edit"></span>
-              Edit
-            <% end %>
+           
             <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
-              <span class="glyphicon glyphicon-trash"></span>
-              Delete
+              <span class="glyphicon glyphicon-trash"></span>Delete
+            
+              
             <% end %>
+          
+
+   
+          
+
           </div>
         <% end %>
       </div>
