--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -4,26 +4,31 @@
       <div class="panel-heading center">
         <%= image_tag @pin.image.url(:medium) %>
       </div>
+      
+<center>
       <div class="panel-body">
         <p><%= @pin.description %></p>
 
 <% @pin.tags.any? %>
      <% @pin.tags.each do |tag| %>
-     <span class="label label-default">
+     <span class="label label-info">
         <%= link_to tag.name, tag_path(tag.name) %>
      </span>  
 <% end %>
 <br>
-
         <p><strong><%= @pin.user.name if @pin.user %></strong></p>
+        <hr></hr>
+
+
         <%= link_to pins_path do %>
-              <span class="glyphicon glyphicon-arrow-left"></span>
-              Back
-            <% end %>
+              <span class="glyphicon glyphicon-arrow-left"></span>Back
+            <% end %>  &nbsp
    <% if @pin.user == current_user %>
   <%= link_to edit_pin_path(@pin) do %>
-              <span class="glyphicon glyphicon-edit"></span>
-              Edit
+              <span class="glyphicon glyphicon-edit"></span>Edit
+            <% end %> &nbsp
+  <%= link_to pin_path, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <span class="glyphicon glyphicon-trash"></span>Delete
+              
             <% end %>
-            <% end %>
-  
+  <% end %>
