dropdown menus and fixed navbar

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -18,6 +18,8 @@ $icon-font-path: 'bootstrap/';
      font-weight: normal;
 }
 
+body { padding-top: 60px; }
+
 .checkbox input[type="checkbox"] {
   margin-left: 0;
 }
