--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -9,9 +9,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <center>
-      <%= link_to "Corky", root_path, class: "navbar-brand" %></center>
+      
+      <%= link_to "Corky", root_path, class: "navbar-brand" %>
     </div>
+
 
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,28 +21,26 @@
       
       <ul class="nav navbar-nav navbar-right">
 
- 
-
-    <li><%= link_to root_path do %>
-              <span class="glyphicon glyphicon-home"></span> Home
-            <% end %>
-          </li>
-
          <% if user_signed_in? %>
-          <li>
-            <%= link_to new_pin_path do %>
-              <span class="glyphicon glyphicon-plus"></span> New
-            <% end %>
-          </li>
+<li>
+    <a data-target="#" href="page.html" data-toggle="dropdown" class="dropdown-toggle"><span class="glyphicon glyphicon-plus"></span>New </a>
+    <ul class="dropdown-menu">
+        <li><%= link_to new_pin_path do %>Cork</li>
+        <li class="divider"></li>
+        <li><a href="#">Corkboard</a></li>
+    </ul>  
+</li>
+<% end %>
 
-
-
-
-
-          <li><%= link_to "Settings", edit_user_registration_path %>
-          </li>            
-
-          <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+<li>
+    <a data-target="#" href="page.html" data-toggle="dropdown" class="dropdown-toggle"><span class="glyphicon glyphicon-user"></span>Profile</a>
+    <ul class="dropdown-menu">
+        <li><%= link_to edit_user_registration_path do %>Settings</li>
+        <li class="divider"></li>
+        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+    </ul>  
+</li>
+<% end %>
         <% else %>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
